// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoLink basic go forward link renders as expected 1`] = `
<a
  className="inline-block link link--blue txt-m txt-bold"
  href="http://www.mapbox.com"
>
  <ChevronousText
    iconBefore={false}
    iconSize="1.5em"
    text="Read Mapbox"
  />
</a>
`;

exports[`GoLink go forward new tab link renders as expected 1`] = `
<NewTabLink
  className="inline-block link link--blue txt-m txt-bold"
  href="http://www.mapbox.com"
>
  <ChevronousText
    iconBefore={false}
    iconSize="1.5em"
    text="See all of the things"
  />
</NewTabLink>
`;

exports[`GoLink large go forward link renders as expected 1`] = `
<a
  className="inline-block link link--blue txt-l txt-bold"
  href="http://www.mapbox.com"
>
  <ChevronousText
    iconBefore={false}
    iconSize="1.5em"
    text="Reach for the stars"
  />
</a>
`;

exports[`GoLink light go forward link renders as expected 1`] = `
<a
  className="inline-block link link--white txt-m txt-bold"
  href="http://www.mapbox.com"
>
  <ChevronousText
    iconBefore={false}
    iconSize="1.5em"
    text="View all of Mapbox"
  />
</a>
`;

exports[`GoLink multiline text, go forward link renders as expected 1`] = `
<a
  className="inline-block link link--blue txt-m txt-bold"
  href="http://www.mapbox.com"
>
  <ChevronousText
    iconBefore={false}
    iconSize="1.5em"
    text="\\"It was the best of times, it was the worst of times, it was the age of wisdom, it was the age of foolishness, it was the epoch of belief, it was the epoch of incredulity, it was the season of Light, it was the season of Darkness, it was the spring of hope, it was the winter of despair, we had everything before us, we had nothing before us...\\" - A Tale of Two Cities"
  />
</a>
`;

exports[`GoLink small go forward link renders as expected 1`] = `
<a
  className="inline-block link link--blue txt-s txt-bold"
  href="http://www.mapbox.com"
>
  <ChevronousText
    iconBefore={false}
    iconSize="1.5em"
    text="Maybe there's something cool if you go here"
  />
</a>
`;

exports[`GoLink small, unbolded, go back new tab link renders as expected 1`] = `
<NewTabLink
  className="inline-block link link--blue txt-s"
  href="http://www.mapbox.com"
>
  <ChevronousText
    iconBefore={true}
    iconSize="1.5em"
    text="Jusk kidding! Go back to this new place."
  />
</NewTabLink>
`;

exports[`GoLink unbolded go forward link renders as expected 1`] = `
<a
  className="inline-block link link--blue txt-m"
  href="http://www.mapbox.com"
>
  <ChevronousText
    iconBefore={false}
    iconSize="1.5em"
    text="Go to Mapbox"
  />
</a>
`;
